--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
   text-align: left;
 }
 
+.list .title {
+  cursor: pointer;
+}
+
 .like {
   margin-left: 10px;
   cursor: pointer;
@@ -29,4 +33,10 @@
   margin-left: 5px;
   font-style: normal;
   font-weight: 500;
+}
+
+.modal {
+  margin-top: 20px;
+  padding: 20px;
+  background: #eee;
 }
