--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,20 @@
   padding: 20px;
   background: #eee;
 }
+
+.publish {
+  margin: 30px 0;
+}
+
+.publish input {
+  width: 80%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+
+.publish button {
+  display: block;
+  margin: 10px auto 0;
+}
